--- a/index.html
+++ b/index.html
@@ -1,86 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="./reset.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="assets/style.css">
 
-    <link
-     rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-     />
-
-     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-    <link href="./style.css" rel="stylesheet"/>
-
-    <title>Weather Dashboard</title>
-
-  </head>
+  <title>weather Dashboard</title>
+</head>
 <body>
-  <nav class="navbar d-flex">
-    <div class="navbar-header mb-1 h1">Weather Dashboard</div>
-  </nav>
-
-  <main class="container d-flex-inline">
+  <h1 class="jumbotron">Weather Dashboard</h1>
+  <main class="container">
     <div class="row">
-      <div class="col-md-4 search-column">
-        <form>
-          <h2>Search City:</h2>
-          <div class="input-field">
-            <input type="text" id="input-city" class = "ctrl-form" placeholder="Enter City">
-            <div class="input-field-append">
-              <button type="submit" id="sumbitBtn" class="btn btn-primary fas fa-search">
-              </button>
+      <aside class="col sideBar">
+        <nav>
+          <div class="row">
+            <div class="input-grp mb-2 container">
+              <div class="row">
+                <label class="searchSection" for="searchInput">Search City: </label>
+              </div>
+              <div class="row">
+                <input id="searchInput" type="text" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon">
+                <div class="input-group-append">
+                  <button class="btn btn-primary" type="button" id="button-addon">Search</button>
+                </div>
+              </div>
             </div>
           </div>
-        </form>
+          <div class="row">
+            <ul class="list-group"></ul>
+          </div>
+        </nav>
+      </aside>
 
-        <ul id="previousSearchLst" class="btn-group-vertical">
-
-        </ul>
-
-      </div>
-    </div>
-      <section class="col-md-8">
-        <div class="current-weather">
-          <h2>Current Weather Display</h2>
-        </div>
-        <div>
-          <h3>5-Day Forecast:</h3>
-          <div class="row" id="weather-forecast">
-        </div>
+    <div class="col col-xl-6">
+      <section class="container">
+        <div class="row forecastToday">
+          <div class="container">
+            <div class="row">
+              <h2 id="cityName" class="col-md-6"></h2>
+              <img id="currentImage" alt="Weather Image">
+              <ls id="temp"></ls>
+              <ls id="humidity"></ls>
+              <ls id="windSpeed"></ls>
+              <ls id="uvIndex"></ls>
+            </div>
+          </div>
+          <div class="row">
+            <h3>5-Day Forecast:</h3>
+          </div>
+          <div class="row d-inline-flex">
+            <section class="card text-white bg-primary" style="width: 7rem;">
+              <div class="card-body">
+                <h4 id="cardDate1" class="card-title"></h4>
+                <img id="cardImage1" alt="weather">
+                <p id="cardTemp1" class="card-text">
+                </p>
+                <p id="cardHum1" class="card-text"></p>
+              </div>
+            </section>
+            <section class="card text-white bg-primary" style="width: 7rem;">
+              <div class="card-body">
+                <h4 id="cardDate2" class="card-title"></h4>
+                <img id="cardImage2" alt="weather">
+                <p id="cardTemp2" class="card-text">
+                </p>
+                <p id="cardHum2" class="card-text"></p>
+              </div>
+            </section>
+            <section class="card text-white bg-primary" style="width: 7rem;">
+              <div class="card-body">
+                <h4 id="cardDate3" class="card-title"></h4>
+                <img id="cardImage3" alt="weather">
+                <p id="cardTemp3" class="card-text">
+                </p>
+                <p id="cardHum3" class="card-text"></p>
+              </div>
+            </section>
+            <section class="card text-white bg-primary" style="width: 7rem;">
+              <div class="card-body">
+                <h4 id="cardDate4" class="card-title"></h4>
+                <img id="cardImage4" alt="weather">
+                <p id="cardTemp1" class="card-text">
+                </p>
+                <p id="cardHum4" class="card-text"></p>
+              </div>
+            </section>
+            <section class="card text-white bg-primary" style="width: 7rem;">
+              <div class="card-body">
+                <h4 id="cardDate5" class="card-title"></h4>
+                <img id="cardImage5" alt="weather">
+                <p id="cardTemp5" class="card-text">
+                </p>
+                <p id="cardHum5" class="card-text"></p>
+              </div>
+            </section>
+          </div>
         </div>
       </section>
-    </main>
-
-
-  <script data-main="scripts/main" src="scripts/require.js"></script>
+    </div>
+    </div>
+  </main>
   
-  <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
-    <script src="script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  <script src="script.js"></script>
 </body>
 </html>
