--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 
   
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./assets/style.css">
 
   
 </head>
@@ -42,7 +42,7 @@
         </nav>
       </aside>
 
-    <div id="currentWeather" class="col col-kl-6 d-inline-flex">
+    <div id="currentWeather" class="col col-lg-6 d-inline-flex">
       <section class="container">
         <div class="row forecastToday">
           <div class="container">
@@ -50,7 +50,7 @@
               <h2 id="cityName" class="col-xs-12 d-flex flex-wrap"></h2>
               <div class="col-md">
               <p id="currentDay" class="lead"></p>
-              <p><img id="currentImage" alt="Weather Image"></p>
+              <p><img id="currentImage" class="hide" alt="Weather Image"></p>
               </div>
               <div class="col-md">
               <li id="temp"></li>
@@ -66,52 +66,8 @@
           <div class="row">
             <h3>5-Day Forecast:</h3>
           </div>
-          <div class="row d-inline-flex">
-            <section class="card text-black bg-primary" style="width: 7rem;">
-              <div class="card-body">
-                <h4 id="cardDate0" class="card-title"></h4>
-                <img id="cardImage0" alt="weather">
-                <p id="cardTemp0" class="card-text">
-                </p>
-                <p id="cardHum0" class="card-text"></p>
-              </div>
-            </section>
-            <section class="card text-black bg-primary" style="width: 7rem;">
-              <div class="card-body">
-                <h4 id="cardDate1" class="card-title"></h4>
-                <img id="cardImage1" alt="weather">
-                <p id="cardTemp1" class="card-text">
-                </p>
-                <p id="cardHum1" class="card-text"></p>
-              </div>
-            </section>
-            <section class="card text-black bg-primary" style="width: 7rem;">
-              <div class="card-body">
-                <h4 id="cardDate2" class="card-title"></h4>
-                <img id="cardImage2" alt="weather">
-                <p id="cardTemp2" class="card-text">
-                </p>
-                <p id="cardHum2" class="card-text"></p>
-              </div>
-            </section>
-            <section class="card text-black bg-primary" style="width: 7rem;">
-              <div class="card-body">
-                <h4 id="cardDate3" class="card-title"></h4>
-                <img id="cardImage3" alt="weather">
-                <p id="cardTemp3" class="card-text">
-                </p>
-                <p id="cardHum3" class="card-text"></p>
-              </div>
-            </section>
-            <section class="card text-black bg-primary" style="width: 7rem;">
-              <div class="card-body">
-                <h4 id="cardDate4" class="card-title"></h4>
-                <img id="cardImage4" alt="weather">
-                <p id="cardTemp1" class="card-text">
-                </p>
-                <p id="cardHum4" class="card-text"></p>
-              </div>
-            </section>    
+          <div id="cards" class="row d-inline-flex">
+     
           </div>
         </div>
       </section>
@@ -131,6 +87,6 @@
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
 
-  <script src="./script.js"></script>
+  <script src="./assets/script.js"></script>
 </body>
 </html>
