--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>Weather Dashboard</title>
 
-  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./assets/reset.css">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
 
